--- a/src/Components/LandingPage/landingPage.css
+++ b/src/Components/LandingPage/landingPage.css
@@ -1,49 +1,49 @@
+@import url('https://fonts.googleapis.com/css?family=Chonburi|Forum&display=swap');
+
 #landingPage{
   height: 100vh;
-  background-image: url('../../assets/will-porada-y-6fm55D0nU-unsplash.jpg');
+  background-image: url('../../assets/080.JPG');
   background-repeat: no-repeat;
   background-position: center; 
   background-size: cover;
-  /* background-color: aqua; */
-  opacity: 0.5;
   margin-bottom: 30px;
 }
 
 #mainInfo {
-  /* background-color: #070707dc; */
-  width: 30%;
-  text-align: center;
+  background-color: #31313348;
+  width: 100%;
+  text-align: left;
   position: relative;
-  top: 33vh;
-  left: 58.5vw;
+  top: 50vh;
   padding: 40px;
-  /* color: #C7C7C7; */
+  padding-left: 12vw;
   border-radius: 50px;
 }
 
 #mainInfo > h1 {
-  font-size: 4.5em;
-  margin: 8px;
+  font-family: 'Forum', cursive;
+  color: white;
+  font-size: 6em;
+  margin-bottom: 20px;
   font-weight: bold;
 }
 
 #mainInfo > h2 {
-  font-size: 2.7em;
-  margin: 8px;
+  font-family: 'Forum', cursive;
+  color: white;
+  font-size: 4em;
+  margin-bottom: 20px;
   font-weight: bold;
 }
 
 button {
   display: block;
-  margin: 10px auto;
-  /* background-color: #070707;
-  border: 2px solid rgba(225, 69, 17, 0.562);
-  color: #C7C7C7; */
+  margin: 10px;
   padding: 8px;
   border-radius: 10px;
 }
 
 #mainInfo > svg {
-  /* color: #E14511; */
-  font-size: 2em;
+  font-size: 3.5em;
+  color: white;
 }
