--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -17,6 +17,13 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: black;
   font-size: 115%;
+  color: rgba(0, 0, 0, 0.904);
+}
+
+@media (min-width: 768px){
+  nav a {
+    font-size: 1.5em;
+    font-weight: 600;
+  }
 }
